[FIX] error handler
