# docs/swagger.yaml
@@ -1,112 +1,47 @@
 definitions:
-  model.AdminRequest:
+  model.ActivityGroupRequest:
     properties:
       email:
-        example: admin@toqcer.id
         type: string
-      name:
-        example: admin
-        type: string
-      password:
-        example: strongpassword
+      title:
         type: string
     type: object
-  model.AdminResponse:
+  model.ActivityGroupResponse:
     properties:
       created_at:
-        type: integer
+        type: string
       deleted_at:
-        type: integer
+        type: string
       email:
         type: string
       id:
         type: integer
-      name:
+      title:
         type: string
       updated_at:
-        type: integer
-    type: object
-  model.AuthRequest:
-    properties:
-      email:
-        example: user@toqcer.id
         type: string
-      password:
-        example: strongpassword
-        type: string
-    type: object
-  model.AuthResponse:
-    properties:
-      email:
-        type: string
-      id:
-        type: integer
-      password:
-        type: string
-    type: object
-  model.ResetPasswordRequest:
-    properties:
-      email:
-        example: user@toqcer.id
-        type: string
-    type: object
-  model.UserRequest:
-    properties:
-      birthday:
-        type: integer
-      email:
-        example: user@toqcer.id
-        type: string
-      name:
-        example: toqcer
-        type: string
-      password:
-        example: strongpassword
-        type: string
-      phone:
-        example: "08512132332"
-        type: string
-    type: object
-  model.UserResponse:
-    properties:
-      birthday:
-        type: integer
-      created_at:
-        type: integer
-      deleted_at:
-        type: integer
-      email:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      phone:
-        type: string
-      updated_at:
-        type: integer
     type: object
   model.WebResponse:
     properties:
-      code:
-        type: integer
       data: {}
+      message:
+        type: string
       status:
         type: string
     type: object
 info:
   contact:
-    email: wahyumiftahul7@gmail.com
+    email: uloydev@gmail.com
     name: uloydev
   description: todo list api golang
   title: TODO LIST API
   version: "1.0"
 paths:
-  /v1/admin:
+  /activity-groups:
     get:
       consumes:
       - application/json
-      description: get all Admin data from database
+      description: get all ActivityGroup data from database
       produces:
       - application/json
       responses:
@@ -118,7 +53,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.AdminResponse'
+                    $ref: '#/definitions/model.ActivityGroupResponse'
                   type: array
               type: object
         "400":
@@ -139,22 +74,20 @@ paths:
                 data:
                   type: string
               type: object
-      security:
-      - ApiKeyAuth: []
-      summary: Get All Admin
+      summary: Get All ActivityGroup
       tags:
-      - admin
+      - activity-groups
     post:
       consumes:
       - application/json
-      description: Create New Admin / Register Admin
+      description: Create New ActivityGroup / Register ActivityGroup
       parameters:
-      - description: Register Admin
+      - description: Register ActivityGroup
         in: body
-        name: admin
+        name: ActivityGroup
         required: true
         schema:
-          $ref: '#/definitions/model.AdminRequest'
+          $ref: '#/definitions/model.ActivityGroupRequest'
       produces:
       - application/json
       responses:
@@ -165,7 +98,7 @@ paths:
             - $ref: '#/definitions/model.WebResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/model.AdminResponse'
+                  $ref: '#/definitions/model.ActivityGroupResponse'
               type: object
         "400":
           description: Bad Request
@@ -185,61 +118,19 @@ paths:
                 data:
                   type: string
               type: object
-      security:
-      - ApiKeyAuth: []
-      summary: Create Admin
+      summary: Create ActivityGroup
       tags:
-      - admin
-  /v1/admin/auth:
-    post:
-      consumes:
-      - application/json
-      description: authenticate admin / login admin
-      parameters:
-      - description: Auth admin
-        in: body
-        name: auth
-        required: true
-        schema:
-          $ref: '#/definitions/model.AuthRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/model.AuthResponse'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  type: string
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  type: string
-              type: object
-      summary: Auth Admin
-      tags:
-      - admin
-  /v1/user:
+      - activity-groups
+  /activity-groups/:
     get:
       consumes:
       - application/json
-      description: get all user data from database
+      description: get ActivityGroup data by id from database
+      parameters:
+      - description: int valid
+        in: path
+        name: id
+        type: integer
       produces:
       - application/json
       responses:
@@ -250,9 +141,7 @@ paths:
             - $ref: '#/definitions/model.WebResponse'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/model.UserResponse'
-                  type: array
+                  $ref: '#/definitions/model.ActivityGroupResponse'
               type: object
         "400":
           description: Bad Request
@@ -272,34 +161,26 @@ paths:
                 data:
                   type: string
               type: object
-      security:
-      - ApiKeyAuth: []
-      summary: Get All User
+      summary: Get ActivityGroup by id
       tags:
-      - user
-    post:
+      - activity-groups
+  /v1/activity-groups/{id}:
+    delete:
       consumes:
       - application/json
-      description: Create New User / Register User
+      description: Delete ActivityGroup
       parameters:
-      - description: Register user
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/model.UserRequest'
+      - description: int valid
+        in: path
+        name: id
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/model.UserResponse'
-              type: object
+            $ref: '#/definitions/model.WebResponse'
         "400":
           description: Bad Request
           schema:
@@ -318,21 +199,24 @@ paths:
                 data:
                   type: string
               type: object
-      summary: Create User
+      summary: Delete ActivityGroup
       tags:
-      - user
-  /v1/user/auth:
-    post:
+      - activity-groups
+    put:
       consumes:
       - application/json
-      description: authenticate user / login User
+      description: Update ActivityGroup
       parameters:
-      - description: Auth user
+      - description: int valid
+        in: path
+        name: id
+        type: integer
+      - description: Update ActivityGroup
         in: body
-        name: auth
+        name: activity-groups
         required: true
         schema:
-          $ref: '#/definitions/model.AuthRequest'
+          $ref: '#/definitions/model.ActivityGroupRequest'
       produces:
       - application/json
       responses:
@@ -343,7 +227,7 @@ paths:
             - $ref: '#/definitions/model.WebResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/model.AuthResponse'
+                  $ref: '#/definitions/model.ActivityGroupResponse'
               type: object
         "400":
           description: Bad Request
@@ -363,54 +247,9 @@ paths:
                 data:
                   type: string
               type: object
-      summary: Auth User
+      summary: Update ActivityGroup
       tags:
-      - user
-  /v1/user/reset-password:
-    post:
-      consumes:
-      - application/json
-      description: request reset password user
-      parameters:
-      - description: Request Reset Password User
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/model.ResetPasswordRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  type: string
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  type: string
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.WebResponse'
-            - properties:
-                data:
-                  type: string
-              type: object
-      summary: Request Reset Password User
-      tags:
-      - user
+      - activity-groups
 securityDefinitions:
   ApiKeyAuth:
     in: header
